--- a/lab2/app/src/main/res/layout/timer_home.xml
+++ b/lab2/app/src/main/res/layout/timer_home.xml
@@ -4,51 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="40dp"
-    android:layout_marginBottom="10dp"
+    android:orientation="vertical"
     >
 
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="39dp">
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvTimerTitle"
         android:layout_width="120dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@color/aqua"
+        android:background="@color/title_aqua"
         android:gravity="center"
         android:text="timer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="100dp"
+        android:id="@+id/tvTimerDuration"
+        android:layout_width="90dp"
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="26 sec"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="80dp"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:text="Edit"
-        android:layout_marginLeft="10dp"
-        android:layout_height="match_parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tvTimerId"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
 
     <Button
-        android:layout_width="80dp"
+        android:id="@+id/btnEdit"
+        android:layout_width="70dp"
+        android:text="Edit"
+        android:backgroundTint="@color/btn_edit"
+        android:layout_height="match_parent" />
+
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="70dp"
         android:layout_height="match_parent"
         android:text="Del"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:backgroundTint="@color/btn_del"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp" />
 
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/black"/>
 
 </LinearLayout>
