--- a/lab2/app/src/main/res/layout/activity_edit.xml
+++ b/lab2/app/src/main/res/layout/activity_edit.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Timer"
-        android:textColor="@color/black"
+        android:textColor="?colorText"
         android:textSize="30sp"
         android:fontFamily="@font/playfairdisplay_bold"
         android:layout_marginLeft="10dp"
@@ -55,52 +55,53 @@
             style="@style/edit_name_field"
             android:text="Color:"
             android:layout_marginLeft="10dp"/>
+        <RadioGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="8dp"
+            android:id="@+id/RGroup">
 
-        <RadioButton
-            android:id="@+id/color_green"
-            style="@style/color_circle"
-            android:backgroundTint="@color/title_green"
-            android:button="@android:color/transparent"/>
+            <RadioButton
+                android:id="@+id/color_green"
+                style="@style/color_circle"
+                android:backgroundTint="@color/title_green"/>
 
-        <RadioButton
-            android:id="@+id/color_yellow"
-            style="@style/color_circle"
-            android:button="@android:color/transparent"
-            android:backgroundTint="@color/title_yellow"
-            android:layout_marginStart="10dp"
-            />
+            <RadioButton
+                android:id="@+id/color_yellow"
+                style="@style/color_circle"
+                android:backgroundTint="@color/title_yellow"
+                android:layout_marginStart="10dp"
+                />
 
-        <RadioButton
-            android:id="@+id/color_red"
-            style="@style/color_circle"
-            android:button="@android:color/transparent"
-            android:backgroundTint="@color/title_red"
-            android:layout_marginStart="10dp"
-            />
+            <RadioButton
+                android:id="@+id/color_red"
+                style="@style/color_circle"
+                android:backgroundTint="@color/title_red"
+                android:layout_marginStart="10dp"
+                />
 
-        <RadioButton
-            android:id="@+id/color_pink"
-            style="@style/color_circle"
-            android:button="@android:color/transparent"
-            android:backgroundTint="@color/title_pink"
-            android:layout_marginStart="10dp"
-            />
+            <RadioButton
+                android:id="@+id/color_pink"
+                style="@style/color_circle"
+                android:backgroundTint="@color/title_pink"
+                android:layout_marginStart="10dp"
+                />
 
-        <RadioButton
-            android:id="@+id/color_blue"
-            style="@style/color_circle"
-            android:button="@android:color/transparent"
-            android:backgroundTint="@color/title_blue"
-            android:layout_marginStart="10dp"
-            />
+            <RadioButton
+                android:id="@+id/color_blue"
+                style="@style/color_circle"
+                android:backgroundTint="@color/title_blue"
+                android:layout_marginStart="10dp"
+                />
 
-        <RadioButton
-            android:id="@+id/color_aqua"
-            style="@style/color_circle"
-            android:button="@android:color/transparent"
-            android:backgroundTint="@color/title_aqua"
-            android:layout_marginStart="10dp"
-            />
+            <RadioButton
+                android:id="@+id/color_aqua"
+                style="@style/color_circle"
+                android:backgroundTint="@color/title_aqua"
+                android:layout_marginStart="10dp"
+                />
+        </RadioGroup>
 
     </LinearLayout>
 
@@ -113,10 +114,18 @@
         android:layout_marginRight="10dp"/>
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recPhases"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:paddingHorizontal="10dp">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/phases_list"
+        android:layout_width="match_parent"
+        android:layout_height="440dp"
+        android:layout_weight="1"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
@@ -126,5 +135,42 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:paddingHorizontal="10dp">
+
+        <Button
+            android:id="@+id/btnTimerSave"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="50dp"
+            android:text="Save"
+            android:textSize="12sp"
+            android:padding="0dp"
+            android:layout_marginRight="10dp"
+            android:fontFamily="@font/playfairdisplay_bold"
+            android:backgroundTint="@color/btn_edit"
+            android:textColor="@android:color/white"/>
+
+        <Button
+            android:id="@+id/btnPhaseNew"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="50dp"
+            android:text="New phase"
+            android:textSize="12sp"
+            android:padding="0dp"
+            android:fontFamily="@font/playfairdisplay_bold"
+            android:backgroundTint="@color/btn_edit"
+            android:textColor="@android:color/white"/>
+
+    </LinearLayout>
 
 </LinearLayout>
