--- a/lab2/app/src/main/res/values/style.xml
+++ b/lab2/app/src/main/res/values/style.xml
@@ -5,12 +5,13 @@
         <item name="android:layout_height">30dp</item>
         <item name="android:layout_width">30dp</item>
         <item name="android:background">@drawable/circle_toggle</item>
+<!--        <item name="android:button">@android:color/transparent</item>-->
     </style>
 
     <style name="edit_name_field">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?colorText</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/playfairdisplay_regular</item>
         <item name="android:layout_marginRight">10dp</item>
@@ -20,10 +21,14 @@
     <style name="edit_change_field">
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">?colorText</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">@font/playfairdisplay_regular</item>
         <item name="android:inputType">text</item>
     </style>
+
+<!--    <style name="AppTheme" parent="Theme.AppCompat">-->
+<!--        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>-->
+<!--    </style>-->
 
 </resources>
