--- a/lab2/app/src/main/res/layout/activity_edit.xml
+++ b/lab2/app/src/main/res/layout/activity_edit.xml
@@ -26,7 +26,7 @@
 
         <TextView
             style="@style/edit_name_field"
-            android:text="Name:"
+            android:text="@string/timer_name"
             android:layout_marginLeft="10dp"/>
 
         <EditText
@@ -53,7 +53,7 @@
 
         <TextView
             style="@style/edit_name_field"
-            android:text="Color:"
+            android:text="@string/color_edit"
             android:layout_marginLeft="10dp"/>
         <RadioGroup
             android:layout_width="wrap_content"
@@ -127,8 +127,6 @@
         android:layout_height="440dp"
         android:layout_weight="1"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
 
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
@@ -151,7 +149,7 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="50dp"
-            android:text="Save"
+            android:text="@string/save_btn"
             android:textSize="12sp"
             android:padding="0dp"
             android:layout_marginRight="10dp"
@@ -164,7 +162,7 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="50dp"
-            android:text="New phase"
+            android:text="@string/new_phase_btn"
             android:textSize="12sp"
             android:padding="0dp"
             android:fontFamily="@font/playfairdisplay_bold"
