--- a/lab2/app/src/main/res/layout/phase_adapter.xml
+++ b/lab2/app/src/main/res/layout/phase_adapter.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="230dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <TextView
@@ -11,89 +11,99 @@
         android:layout_width="0dp"
         android:layout_height="0dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal">
-
-        <TextView
-            style="@style/edit_name_field"
-            android:text="Name:"
-            android:layout_marginLeft="10dp"/>
-
-        <EditText
-            style="@style/edit_change_field"
-            android:id="@+id/etPhaseName"
-            android:text="Phase Name"
-            />
-
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    style="@style/edit_name_field"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/phase_name"/>
+
+                <TextView
+                    android:id="@+id/tvPhaseName"
+                    style="@style/edit_name_field"
+                    android:text="Name of the phase"/>
 
 
-        <TextView
-            style="@style/edit_name_field"
-            android:text="Phase duration (sec):"
-            android:layout_marginLeft="10dp"/>
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/etPhaseDuration"
-            style="@style/edit_change_field"
-            android:text="20"
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:orientation="horizontal">
 
+
+                <TextView
+                    android:id="@+id/tvDuration"
+                    style="@style/edit_name_field"
+                    android:layout_marginLeft="10dp"
+                    android:text="20 sec\nduration"
+                    android:textAlignment="center"/>
+
+                <TextView
+                    android:id="@+id/tvDurationRest"
+                    style="@style/edit_name_field"
+                    android:layout_marginLeft="20dp"
+                    android:text="10 sec\nrest"
+                    android:textAlignment="center"/>
+
+                <TextView
+                    android:id="@+id/tvRepetitions"
+                    style="@style/edit_name_field"
+                    android:layout_marginLeft="20dp"
+                    android:text="5\nreps"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btnPhaseDelete"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="@string/delete_btn"
+                android:textSize="12sp"
+                android:padding="0dp"
+                android:fontFamily="@font/playfairdisplay_bold"
+                android:backgroundTint="@color/btn_del"
+                android:textColor="@android:color/white"/>
+
+            <Button
+                android:id="@+id/btnPhaseEdit"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:text="@string/edit_btn"
+                android:textSize="12sp"
+                android:padding="0dp"
+                android:fontFamily="@font/playfairdisplay_bold"
+                android:backgroundTint="@color/btn_edit"
+                android:textColor="@android:color/white"/>
+        </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
+    <View
+        android:id="@+id/divider2"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal">
+        android:layout_height="1dp"
+        android:background="?colorLine"/>
 
-        <TextView
-            style="@style/edit_name_field"
-            android:text="Rest duration (sec):"
-            android:layout_marginLeft="10dp"/>
 
-        <EditText
-            android:id="@+id/etPhaseDurationRest"
-            style="@style/edit_change_field"
-            android:text="10"
-            />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal">
-
-        <TextView
-            style="@style/edit_name_field"
-            android:text="Repetitions amount:"
-            android:layout_marginLeft="10dp"/>
-
-        <EditText
-            android:id="@+id/etPhaseRepetitions"
-            style="@style/edit_change_field"
-            android:text="2"
-            />
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/btnPhaseDelete"
-        android:layout_width="match_parent"
-        android:text="Delete"
-        android:textSize="12sp"
-        android:padding="0dp"
-        android:fontFamily="@font/playfairdisplay_bold"
-        android:backgroundTint="@color/btn_del"
-        android:layout_height="match_parent"
-        android:onClick="OnClickDeletePhase"
-        android:textColor="@android:color/white"/>
 
 </LinearLayout>
