--- a/lab2/app/src/main/res/layout/timer_home.xml
+++ b/lab2/app/src/main/res/layout/timer_home.xml
@@ -45,7 +45,7 @@
     <Button
         android:id="@+id/btnTimerEdit"
         android:layout_width="70dp"
-        android:text="Edit"
+        android:text="@string/edit_btn"
         android:textSize="12sp"
         android:padding="0dp"
         android:fontFamily="@font/playfairdisplay_bold"
@@ -57,7 +57,7 @@
         android:id="@+id/btnTimerDelete"
         android:layout_width="70dp"
         android:layout_height="match_parent"
-        android:text="Del"
+        android:text="@string/delete_btn"
         android:textSize="12sp"
         android:padding="0dp"
         android:fontFamily="@font/playfairdisplay_bold"
