--- a/lab2/app/src/main/res/values/attr.xml
+++ b/lab2/app/src/main/res/values/attr.xml
@@ -2,4 +2,6 @@
 <resources>
     <attr name="colorText" format="reference|color" />
     <attr name="colorLine" format="reference|color" />
+    <attr name="colorPhaseBackStart" format="reference|color" />
+    <attr name="colorPhaseBackStartText" format="reference|color" />
 </resources>
