--- a/lab2/app/src/main/res/layout/activity_main.xml
+++ b/lab2/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
+    android:orientation="vertical"
     >
 
 
@@ -12,11 +13,30 @@
         android:id="@+id/timer_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
 
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginTop="20dp">
+        <Button
+            android:id="@+id/btnTimerNew"
+            android:layout_height="match_parent"
+            android:layout_width="180dp"
+            android:text="@string/new_timer_btn"
+            android:textSize="16sp"
+            android:padding="0dp"
+            android:fontFamily="@font/playfairdisplay_bold"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/btn_edit"
+            android:textColor="@android:color/white"/>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </LinearLayout>
