--- a/lab2/app/src/main/res/layout/activity_timer_start.xml
+++ b/lab2/app/src/main/res/layout/activity_timer_start.xml
@@ -77,4 +77,16 @@
         android:layout_marginBottom="200dp"
         android:layout_marginRight="20dp"
         app:srcCompat="@drawable/ic_next" />
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|start"
+        android:layout_marginBottom="530dp"
+        android:layout_marginLeft="20dp"
+        android:background="@color/title_red"
+        android:backgroundTint="@color/title_red"
+        app:srcCompat="@drawable/ic_exit" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
